2001-02-09  Cai Jianming  <caijianming@yahoo.co.uk>

	* data.cc (DATA_REDUCTION): Undo previous change.

2001-02-13  Matthew W. Roberts  <matt@nephi.tamu.edu>

	* load-save.cc (Fload): Accept -4 as an alias for -v4 and -mat4-binary.
	(Fsave): Likewise.

2001-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lex.l (lexical_feedbac::init):
	Initialize looking_at_matrix_or_assign_lhs too.

2001-02-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* data.cc (DATA_REDUCTION): Allow FCN(x,0) to be equivalent to FCN(x).

2001-02-06  Mumit Khan  <khan@nanotech.wisc.edu>

	* oct-stream.cc (octave_scan): Partially implement and specialize
	for char*.  Delete the old template instantiations.
	(BEGIN_S_CONVERSION): Use strings instead of ostrstreambuf.
	(octave_base_stream::do_scanf): Pass correct parameter to
	do_scan_conv.

2001-02-05  Mumit Khan  <khan@nanotech.wisc.edu>

	* pr-output.cc (set_format): Add std:: namespace qualifier as
	needed.

	* oct-stream.cc (octave_scan): Implement, and specialize for
	char*. Delete the old template instantiations.
	(BEGIN_S_CONVERSION): Use strings instead of ostrstreambuf.
	(octave_base_stream::do_scanf): Pass correct parameter to
	do_scan_conv.

	* Makefile.in (TEMPLATE_AR, TEMPLATE_ARFLAGS): Use to create
	archive libraries containing templates.

	* c-file-ptr-stream.h: Include <fstream>. Use <cstdio> instead of
	<stdio.h>
	(c_file_ptr_buf::int_type): Compat typedef for non-ISO libstdc++.
	(c_file_ptr_buf::{overflow, underflow, uflow, pbackfail): Use.
	(c_file_ptr_buf::c_file_ptr_buf): Handle various compilers.
	(c_file_ptr_buf::file_number): New member function.
	(c_file_ptr_buf::fd): New private data.
	(i_c_file_ptr_stream::i_c_file_ptr_stream): Initialize stream
	correctly.
	(o_c_file_ptr_stream::o_c_file_ptr_stream): Likewise.
	* c-file-ptr-stream.cc 
	(c_file_ptr_buf::{overflow, underflow, uflow, pbackfail): Add
	ISO-compliant EOF handling.
	* oct-stream.cc (octave_base_stream::file_number): Use 